--- a/app/src/main/res/layout/activity_gynecology.xml
+++ b/app/src/main/res/layout/activity_gynecology.xml
@@ -27,7 +27,7 @@
                 android:background="@drawable/spinner_bg"
                 android:fontFamily="@font/montserrat"
                 android:padding="12dp"
-                android:text="Breast"
+                android:text="Fetal Medicine"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -46,7 +46,7 @@
                 android:background="@drawable/spinner_bg"
                 android:fontFamily="@font/montserrat"
                 android:padding="12dp"
-                android:text="Colorectal"
+                android:text="General Gynecology"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -65,7 +65,7 @@
                 android:background="@drawable/spinner_bg"
                 android:fontFamily="@font/montserrat"
                 android:padding="12dp"
-                android:text="Endocrine"
+                android:text="Gynecological Oncology"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -84,7 +84,7 @@
                 android:background="@drawable/spinner_bg"
                 android:fontFamily="@font/montserrat"
                 android:padding="12dp"
-                android:text="General"
+                android:text="Obstetrics"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -103,7 +103,7 @@
                 android:background="@drawable/spinner_bg"
                 android:fontFamily="@font/montserrat"
                 android:padding="12dp"
-                android:text="Hepato-Pancreatico-Biliary"
+                android:text="Sexual And Reproductive Health"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
