--- a/app/src/main/res/layout/items_layout.xml
+++ b/app/src/main/res/layout/items_layout.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/itemCard"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="#00e5e5e5"
+    app:cardElevation="0dp"
+    android:clickable="true"
+    app:cardCornerRadius="0dp"
     android:layout_height="wrap_content">
 
     <TextView
@@ -9,7 +15,8 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:clickable="true"
+        android:textSize="16sp"
         android:fontFamily="@font/open_sans"
-        android:padding="10dp" />
+        android:padding="12dp" />
 
-</RelativeLayout>
+</com.google.android.material.card.MaterialCardView>
