--- a/app/src/main/res/layout/activity_pediatrics.xml
+++ b/app/src/main/res/layout/activity_pediatrics.xml
@@ -89,7 +89,7 @@
                 android:textSize="18sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/GastroenterologyRc"
+                android:id="@+id/GastroenRc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
