--- a/app/src/main/res/layout/activity_psychiatry.xml
+++ b/app/src/main/res/layout/activity_psychiatry.xml
@@ -70,7 +70,7 @@
                 android:textSize="18sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/EmergencyRc"
+                android:id="@+id/InfancyRc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
@@ -89,7 +89,7 @@
                 android:textSize="18sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/EndocrinologyRc"
+                android:id="@+id/EatingRc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
@@ -108,7 +108,7 @@
                 android:textSize="18sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/GastroenterologyRc"
+                android:id="@+id/MoodRc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
